main.css
  div{
    font-family: 'Libre Baskerville', serif;
  }
  h1{
    font-family: 'Libre Baskerville', serif;
  }

.icon-white{
  color: white;
}

.Floats{
  background-color: rgba(9,132,120,255);
}

.Suds{
  background-color:rgba(234,35,41,255);
}

.nav{
  background-color: rgba(9,132,120,255);

}

.featurette-divider {
    margin: 5rem ; /* Space out the Bootstrap <hr> more */
  }
  
  /* Thin out the marketing headings */
  .featurette-heading {
    font-weight: 300;
    line-height: 1;
    /* rtl:remove */
    letter-spacing: -.05rem;
  }
  
  /* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 40em) {
    .featurette-heading {
      font-size: 50px;
    }
  }
  
  @media (min-width: 62em) {
    .featurette-heading {
      margin-top: 7rem;
    }
  }

  .bd-placeholder-img {
    font-size: 1.125rem;
    text-anchor: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
  }

  @media (min-width: 768px) {
    .bd-placeholder-img-lg {
      font-size: 3.5rem;
    }
  }

